# IMS

./: .gitignore  .gitmodules  LICENSE  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: Cargo.toml  build.gradle.kts
app/src/: main.rs  state.rs
app/src/operations/: get_aggregated_transaction_analysis_by_filters.rs  list_transactions.rs  mod.rs  start_session.rs
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: CargoPlugin.kt  FlutterPlugin.kt  ims.kotlin-application-conventions.gradle.kts  ims.kotlin-library-conventions.gradle.kts
docs/: Architecture.md
models/: build.gradle.kts  smithy-build.json
models/model/: core.smithy
sdks/dart-clients/: build.gradle.kts
sdks/rust-servers/: build.gradle.kts  smithy-build.json
web_app/: build.gradle.kts  pubspec.yaml
web_app/android/app/: build.gradle
web_app/android/app/src/debug/: AndroidManifest.xml
web_app/android/app/src/main/: AndroidManifest.xml
web_app/android/app/src/main/kotlin/com/ims/web_app/: MainActivity.kt
web_app/ios/Runner.xcodeproj/: project.pbxproj
web_app/lib/: main.dart
web_app/lib/data_sources/: ims_post_client.dart  transaction_summary_ds.dart
web_app/lib/models/: credit_debit_model.dart  debit_by_category_model.dart  transaction_summary.dart
web_app/lib/widgets/: credit_debit_widget.dart  debit_by_category_widget.dart
